# darktable-ai-aid

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
docs/: CHANGELOG.md  architecture.md  data-formats.md  development.md  tag-namespace.md  user-guide.md
plugins/darktable-lua/: INSTALL.md  dt-aid.lua
src/dt_aid/: __main__.py
src/dt_aid/cli/: app.py  logging_setup.py  progress.py
src/dt_aid/core/: config.py  darktable_db.py  device.py  image_io.py  pipeline.py  state.py  tagging.py  xmp.py  xmp_sync.py
src/dt_aid/core/elements/: clip_tagger.py  labels.py
src/dt_aid/core/faces/: add_image_runner.py  cluster.py  cluster_runner.py  detector.py  embeddings.py  matcher.py  rematch_runner.py
tests/: test_smoke.py
tests/fixtures/: make_library.py
